--- a/certsign.html
+++ b/certsign.html
@@ -17,7 +17,7 @@
 						  profile: "www"
 					}
 					$.ajax({
-					  url: 'https://ssltest.it.ilstu.edu:8080/cfssl-api/api/v1/cfssl/sign',
+					  url: window.location.protocol + '//' + window.location.hostname + ':8080/cfssl-api/api/v1/cfssl/sign',
 					  type: 'POST',
 	  				  dataType: 'json',
 	  				  data: JSON.stringify(data),
@@ -26,7 +26,8 @@
 						  $("#certificate").text(data.result.certificate);
 					  },
 	  				  error: function(xhr, textStatus, errorThrown) {
-						  $("#error").text("There was an error: " + errorThrown);
+						  $("#error").text(errorThrown);
+						  $("#error_sub1").text(textStatus)
 					  }
 					});
 				}				
@@ -44,6 +45,9 @@
 			}
 			.label {
 			  font-size: 12pt;
+			}
+			#error {
+				color:red;
 			}
 		</style>
 	</head>
