--- a/certsign.html
+++ b/certsign.html
@@ -55,6 +55,7 @@
 		<h1>IT 351 Certificate Authority</h1>
 		<h2>Submit your Certificate Signing Request Below</h2>
 		<h2 id="error"></h2>
+		<p id="error_sub1"></p>
 		<p>
 			<label class="label" for="hostname">Hostname:</label>
 			<input type="text" name="hostname" value="" id="hostname">
