remove space from textarea

--- a/certsign.html
+++ b/certsign.html
@@ -61,8 +61,7 @@
 			<input type="text" name="hostname" value="" id="hostname">
 			<br/>
 			<br/>
-			<textarea rows="30" cols="65" name="csr" value="" id="csr">
-			</textarea>
+			<textarea rows="30" cols="65" name="csr" value="" id="csr"></textarea>
 			<br/>
 			<button id="submit">Submit</button>
 		</p>
