--- a/certsign.html
+++ b/certsign.html
@@ -29,6 +29,10 @@
 						  $("#error").text(errorThrown);
 						  $("#error_sub1").text(textStatus)
 						  $("#error_sub2").text(xhr.responseText)
+						  var json = $.parseJSON(xhr.responseText);
+						  $(json.errors).each(function(code, text){
+						       console.log(code + " : " + text);     
+						  });
 					  }
 					});
 				}				
