--- a/certsign.html
+++ b/certsign.html
@@ -27,13 +27,13 @@
 					  },
 	  				  error: function(xhr, textStatus, errorThrown) {
 						  $("#error").text(errorThrown);
-						  $("#error_sub1").text(textStatus)
-						  $("#error_sub2").text(xhr.responseText)
 						  var json = $.parseJSON(xhr.responseText);
 						  $(json.errors).each(function(i,val){
 						      $.each(val,function(k,v){
-						            console.log(k+" : "+ v);     
-						  });
+								  p = document.createElement("p");
+								  p.text(v);
+								  $("#error_sub1").append(p);    
+						  	  });
 						  });
 					  }
 					});
