--- a/certsign.html
+++ b/certsign.html
@@ -22,7 +22,9 @@
 	  				  dataType: 'json',
 	  				  data: JSON.stringify(data),
 	  				  success: function(data, textStatus, xhr) {
-						  $(".error").text("");
+						  $(".error").each(function(e){
+							  e.text("");
+						  });
 						  $("#message").text("Copy the certificate below into a text editor and save it as your certificate");
 						  $("#certificate").text(data.result.certificate);
 					  },
