--- a/certsign.html
+++ b/certsign.html
@@ -23,7 +23,7 @@
 	  				  data: JSON.stringify(data),
 	  				  success: function(data, textStatus, xhr) {
 						  $(".error").each(function(e){
-							  e.text("");
+							  $(e).text("");
 						  });
 						  $("#message").text("Copy the certificate below into a text editor and save it as your certificate");
 						  $("#certificate").text(data.result.certificate);
