--- a/certsign.html
+++ b/certsign.html
@@ -22,7 +22,7 @@
 	  				  dataType: 'json',
 	  				  data: JSON.stringify(data),
 	  				  success: function(data, textStatus, xhr) {
-						  $(".error").each(function(e){
+						  $(".error").each(function(i, e){
 							  $(e).text("");
 						  });
 						  $("#message").text("Copy the certificate below into a text editor and save it as your certificate");
