add instructions for multiple hostnames

--- a/certsign.html
+++ b/certsign.html
@@ -12,7 +12,7 @@
 			
 				function submitcsr(){
 					data = {
-						  hostname: $("#hostname").val(),
+						  hostname/ip (separate mutliple entries with commas): $("#hostname").val(),
 				  	  	  certificate_request: $("#csr").val(),
 						  profile: "www"
 					}
