make hostname input larger

--- a/certsign.html
+++ b/certsign.html
@@ -70,7 +70,7 @@
 		<p class="error" id="error_sub2"></p>
 		<p>
 			<label class="label" for="hostname">Hostname/ip (separate multiple entries with commas):</label>
-			<input type="text" name="hostname" value="" id="hostname">
+			<input type="text" cols="25" name="hostname" value="" id="hostname">
 			<br/>
 			<br/>
 			<textarea rows="30" cols="65" name="csr" value="" id="csr"></textarea>
