add certificate type option for client

--- a/certsign.html
+++ b/certsign.html
@@ -72,7 +72,7 @@
 			Certificate Type:
 			<select id="type">
 			  <option value="www" selected>Web Server</option>
-			  <option value="www">Web Client</option>
+			  <option value="client">Web Client</option>
 			  <option value="smime">S/MIME Email</option>
 			</select><br/>
 			<label class="label" for="hostname">Hostname/ip (separate multiple entries with commas):</label>
