add bootstrap and move tags for looks

--- a/certsign.html
+++ b/certsign.html
@@ -41,18 +41,16 @@
 				}				
 			});
 		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<style type="text/css" media="screen">
 			textarea {
 			  border:1px solid #999999;
 			  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
-			  font-size: 12pt;
+			  font-size: 10pt;
 			}
 			input {
 			  border:1px solid #999999;
-			  font-size: 12pt;
-			}
-			.label {
-			  font-size: 12pt;
+			  font-size: 10pt;
 			}
 			.error {
 				color:red;
@@ -69,19 +67,23 @@
 		<p class="error" id="error_sub1"></p>
 		<p class="error" id="error_sub2"></p>
 		<p>
-			Certificate Type:
-			<select id="type">
-			  <option value="www" selected>Web Server</option>
-			  <option value="client">Web Client</option>
-			  <option value="smime">S/MIME Email</option>
-			</select><br/>
-			<label class="label" for="hostname">Hostname/ip (separate multiple entries with commas):</label>
-			<input type="text" size="25" name="hostname" value="" id="hostname">
-			<br/>
-			<br/>
-			<textarea rows="30" cols="65" name="csr" value="" id="csr"></textarea>
-			<br/>
-			<button id="submit">Submit</button>
+			<p>
+				Certificate Type:
+				<select id="type">
+				  <option value="www" selected>Web Server</option>
+				  <option value="client">Web Client</option>
+				  <option value="smime">S/MIME Email</option>
+				</select>
+			</p>
+			<p>Hostname/IP (separate multiple entries with commas):
+				<input type="text" size="25" name="hostname" value="" id="hostname">
+			<p/>
+			<p/>
+				<textarea rows="30" cols="65" name="csr" value="" id="csr"></textarea>
+			<p/>
+			<p>
+				<button id="submit">Submit</button>
+			</p>
 		</p>
 		<p id="message">
 		</p>
