--- a/certsign.html
+++ b/certsign.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>certsign</title>
 		<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
@@ -57,6 +58,9 @@
 			}
 			#message {
 				color:green;
+			}
+			body {
+				margin:5em;
 			}
 		</style>
 	</head>
