change hostname to Subject Alternative Name

--- a/certsign.html
+++ b/certsign.html
@@ -79,7 +79,7 @@
 				  <option value="smime">S/MIME Email</option>
 				</select>
 			</p>
-			<p>Hostname/IP (separate multiple entries with commas):
+			<p>Subject Alternative Name (separate multiple entries with commas):
 				<input type="text" size="25" name="hostname" value="" id="hostname">
 			<p/>
 			<p/>
