--- a/certsign.html
+++ b/certsign.html
@@ -77,6 +77,7 @@
 				  <option value="www" selected>Web Server</option>
 				  <option value="client">Web Client</option>
 				  <option value="smime">S/MIME Email</option>
+				  <option value="ipsec">IPSec</option>
 				</select>
 			</p>
 			<p>Subject Alternative Name (separate multiple entries with commas):
