--- a/eccertsign.html
+++ b/eccertsign.html
@@ -18,7 +18,7 @@
 				  	  	  certificate_request: $("#csr").val()
 					}
 					$.ajax({
-					  url: window.location.protocol + '//' + window.location.hostname + ':8080/cfssl-api/api/v1/cfssl/sign',
+					  url: window.location.protocol + '//' + window.location.hostname + ':7070/cfssl-api/api/v1/cfssl/sign',
 					  type: 'POST',
 	  				  dataType: 'json',
 	  				  data: JSON.stringify(data),
@@ -65,7 +65,7 @@
 		</style>
 	</head>
 	<body id="certsign" onload="">
-		<h1>IT 351 RSA Certificate Authority</h1>
+		<h1>IT 351 EC Certificate Authority</h1>
 		<h2>Submit your Certificate Signing Request Below</h2>
 		<h2 class="error" id="error"></h2>
 		<p class="error" id="error_sub1"></p>
