add ocsp signer as certificate type

--- a/eccertsign.html
+++ b/eccertsign.html
@@ -78,6 +78,7 @@
 				  <option value="client">Web Client</option>
 				  <option value="smime">S/MIME Email</option>
 				  <option value="ipsec">IPSec</option>
+  				  <option value="ocsp">OCSP Signer</option>
 				</select>
 			</p>
 			<p>Subject Alternative Name (separate multiple entries with commas):
