add link to CA cert

--- a/eccertsign.html
+++ b/eccertsign.html
@@ -66,6 +66,7 @@
 	</head>
 	<body id="certsign" onload="">
 		<h1>IT 351 EC Certificate Authority</h1>
+		<p><a href=eccacert.pem>Download CA Certificate</a></p>
 		<h2>Submit your Certificate Signing Request Below</h2>
 		<h2 class="error" id="error"></h2>
 		<p class="error" id="error_sub1"></p>
