split ipsec into client and server

--- a/certsign.html
+++ b/certsign.html
@@ -78,7 +78,8 @@
 				  <option value="client" selected>Web Client</option>
 				  <option value="www">Web Server</option>
 				  <option value="smime">S/MIME Email</option>
-				  <option value="ipsec">IPSec</option>
+				  <option value="ipsec-client">IPSec Client</option>
+				  <option value="ipsec-server">IPSec Server</option>				  
 				  <option value="ocsp">OCSP Signer</option>
 				</select>
 			</p>
